--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   traefik:
-    container_name: traefik:2.9
+    container_name: traefik
     image: traefik
     labels:
       - traefik.enable=false
