--- a/traefik.yml
+++ b/traefik.yml
@@ -3,7 +3,30 @@ providers:
   docker:
     endpoint: "unix:///var/run/docker.sock"
     defaultRule: "Host(`{{ trimPrefix `/` .Name }}.docker.localhost`)"
+    network: "ms-sssm_default"
+    exposedByDefault: false
+    watch: true
+
 
 # API and dashboard configuration
 api:
   insecure: true
+  debug: true
+  dashboard: true
+
+# Static configuration
+entryPoints:
+  web:
+    address: ":80"
+
+# Healthcheck configuration
+ping: {}
+
+log:
+  level: "DEBUG"
+  filePath: "./logs/traefik.log"
+
+accessLog:
+  filePath: "./logs/access.log"
+  
+
