--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "3.9"
+
 services:
   traefik:
     container_name: traefik
-    image: traefik:2.9
+    image: traefik:v2.9
     labels:
       - traefik.enable=false
-    command: --web --docker --docker.domain=docker.localhost
     ports:
-      - "9080:80"
-      - "9880:8080"
+      - "80:80"
+      - "8080:8080"
     volumes:
       - ./traefik.yml:/etc/traefik/traefik.yml
       - /var/run/docker.sock:/var/run/docker.sock
