--- a/traefik.yml
+++ b/traefik.yml
@@ -1,26 +1,16 @@
-# Docker configuration backend
 providers:
   docker:
     endpoint: "unix:///var/run/docker.sock"
     defaultRule: "Host(`{{ trimPrefix `/` .Name }}.docker.localhost`)"
-    network: "ms-sssm_default"
     exposedByDefault: false
-    watch: true
 
-
-# API and dashboard configuration
 api:
   insecure: true
-  debug: true
   dashboard: true
 
-# Static configuration
 entryPoints:
   web:
-    address: ":80"
-
-# Healthcheck configuration
-ping: {}
+    address: :80
 
 log:
   level: "DEBUG"
